--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<title>suck my balls</title>
-<h1>hello gamer</h1>
-<p>i cant code help me please please plasreaergoijeaer</p>
+<title>Claras very cool awesome website</title>
+<h1>Hello i am clarar</h1>
+<p> i do not know how to make a website!!!!!!! </p>
