--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    
 <title>Claras very cool awesome website</title>
 <h1>Hello i am clarar</h1>
+    <body>
 <p> i do not know how to make a website!!!!!!! </p>
+    </body>
+
+</html>
